Fix favicon link tag in index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon/image" type="image/png" href="/app-log.png" />
+    <link rel="icon" type="image/png" href="/app-log.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vaidhya Setu - Telemedicine Platform</title>
     <meta name="description" content="Vaidhya Setu - Connecting urban specialists with rural health centers through advanced telemedicine technology" />
