Update telemedicine platform with booking system, payment features, and UI improvements

--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/app-log.png" />
+    <link rel="icon" type="image/png" href="/src/assets/vaidhya-setu-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vaidhya Setu - Telemedicine Platform</title>
-    <meta name="description" content="Vaidhya Setu - Connecting urban specialists with rural health centers through advanced telemedicine technology" />
+    <meta name="description" content="Vaidhya Setu - Connecting urban general doctors with rural health centers through advanced telemedicine technology" />
     <meta name="author" content="Vaidhya Setu Team" />
 
     <meta property="og:title" content="Vaidhya Setu - Telemedicine Platform" />
-    <meta property="og:description" content="Connecting urban specialists with rural health centers through advanced telemedicine technology" />
+    <meta property="og:description" content="Connecting urban general doctors with rural health centers through advanced telemedicine technology" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
