Update application name from Vaidhya Setu to Clinic Pro and update favicon configuration

--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/src/assets/vaidhya-setu-logo.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vaidhya Setu - Telemedicine Platform</title>
-    <meta name="description" content="Vaidhya Setu - Connecting urban general doctors with rural health centers through advanced telemedicine technology" />
-    <meta name="author" content="Vaidhya Setu Team" />
+    <title>Clinic Pro - Telemedicine Platform</title>
+    <meta name="description" content="Clinic Pro - Connecting urban general doctors with rural health centers through advanced telemedicine technology" />
+    <meta name="author" content="Clinic Pro Team" />
 
-    <meta property="og:title" content="Vaidhya Setu - Telemedicine Platform" />
+    <meta property="og:title" content="Clinic Pro - Telemedicine Platform" />
     <meta property="og:description" content="Connecting urban general doctors with rural health centers through advanced telemedicine technology" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
